--- a/src/assets/css/markdown-body.scss
+++ b/src/assets/css/markdown-body.scss
@@ -19,7 +19,7 @@ time, mark, audio, video {
   vertical-align: baseline;
   border: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-
+  line-height: 20px;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
@@ -94,12 +94,13 @@ code, pre {
 }
 
 code {    
-  padding: 0.2em 0.4em;
+  padding: 2px 8px;
   margin: 0 5px;
   font-size: 85%;
   background-color: rgba(27,31,35,0.1);
   border-radius: 3px;
-  font-family: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
+  // font-family: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
+  font-family: 'Roboto Mono', Monaco, courier, monospace;
   // padding: 0 3px;
 }
 
@@ -151,19 +152,20 @@ form {
 /* GENERAL ELEMENT TYPE STYLES */
 
 h1 {
-  font-size: 2.8em;
+  height: 40px;
+  font-size: 48px;
       border-bottom: 1px solid #eaecef;
 }
 
 h2 {
   margin-bottom: 8px;
-  font-size: 22px;
+  font-size: 36px;
   font-weight: bold;
 }
 
 h3 {
   margin-bottom: 8px;
-  font-size: 18px;
+  font-size: 22px;
   font-weight: bold;
 }
 
@@ -185,6 +187,7 @@ h1,h2,h3,h4,h5,h6{
   margin-top: 24px; 
   // color: #24292e;
    color: #d5000d;
+  white-space: nowrap;
 }
 
 p {
