--- a/src/assets/css/high-light.css
+++ b/src/assets/css/high-light.css
@@ -1,94 +1,63 @@
 /*
 
-github.com style (c) Vasily Polovnyov <vast@whiteants.net>
+Visual Studio-like style based on original C# coloring by Jason Diamond <jason@diamond.name>
 
 */
-
 .hljs {
   display: block;
   overflow-x: auto;
   padding: 0.5em;
-  color: #333;
-  background: #f8f8f8;
+  background: white;
+  color: black;
 }
 
 .hljs-comment,
-.hljs-quote {
-  color: #998;
-  font-style: italic;
+.hljs-quote,
+.hljs-variable {
+  color: #008000;
 }
 
 .hljs-keyword,
 .hljs-selector-tag,
-.hljs-subst {
-  color: #333;
-  font-weight: bold;
-}
-
-.hljs-number,
-.hljs-literal,
-.hljs-variable,
-.hljs-template-variable,
-.hljs-tag .hljs-attr {
-  color: #008080;
+.hljs-built_in,
+.hljs-name,
+.hljs-tag {
+  color: #00f;
 }
 
 .hljs-string,
-.hljs-doctag {
-  color: #d14;
-}
-
 .hljs-title,
 .hljs-section,
-.hljs-selector-id {
-  color: #900;
-  font-weight: bold;
-}
-
-.hljs-subst {
-  font-weight: normal;
-}
-
+.hljs-attribute,
+.hljs-literal,
+.hljs-template-tag,
+.hljs-template-variable,
 .hljs-type,
-.hljs-class .hljs-title {
-  color: #458;
-  font-weight: bold;
+.hljs-addition {
+  color: #a31515;
 }
 
-.hljs-tag,
-.hljs-name,
-.hljs-attribute {
-  color: #000080;
-  font-weight: normal;
+.hljs-deletion,
+.hljs-selector-attr,
+.hljs-selector-pseudo,
+.hljs-meta {
+  color: #2b91af;
 }
 
-.hljs-regexp,
-.hljs-link {
-  color: #009926;
+.hljs-doctag {
+  color: #808080;
+}
+
+.hljs-attr {
+  color: #f00;
 }
 
 .hljs-symbol,
-.hljs-bullet {
-  color: #990073;
+.hljs-bullet,
+.hljs-link {
+  color: #00b0e8;
 }
 
-.hljs-built_in,
-.hljs-builtin-name {
-  color: #0086b3;
-}
-
-.hljs-meta {
-  color: #999;
-  font-weight: bold;
-}
-
-.hljs-deletion {
-  background: #fdd;
-}
-
-.hljs-addition {
-  background: #dfd;
-}
 
 .hljs-emphasis {
   font-style: italic;
