--- a/src/assets/css/markdown-body.css
+++ b/src/assets/css/markdown-body.css
@@ -135,7 +135,8 @@ h1 {
   font-size: 2.8em;
 }
 
-h2 {
+h2 {    
+  margin-left: 5px;
   margin-bottom: 8px;
   font-size: 22px;
   font-weight: bold;
@@ -143,13 +144,14 @@ h2 {
 }
 
 h3 {
+  margin-left: 10px;
   margin-bottom: 8px;
   font-size: 18px;
   font-weight: bold;
   color: #d5000d;
 }
 
-h4 {
+h4 {margin-left: 15px;
   font-size: 16px;
   font-weight: bold;
   color: #303030;
