--- a/src/assets/css/markdown-body.scss
+++ b/src/assets/css/markdown-body.scss
@@ -172,12 +172,14 @@ h1 {
 }
 
 h2 {
+  margin-left: 10px;
   margin-bottom: 8px;
   font-size: 36px;
   font-weight: bold;
 }
 
 h3 {
+  margin-left: 20px;
   margin-bottom: 8px;
   font-size: 22px;
   font-weight: bold;
