--- a/src/assets/css/markdown-body.scss
+++ b/src/assets/css/markdown-body.scss
@@ -167,40 +167,37 @@ form {
 
 h1 {
   height: 40px;
-  font-size: 48px;
+  font-size: 46px;
       border-bottom: 1px solid #eaecef;
 }
 
 h2 {
   margin-left: 10px;
   margin-bottom: 8px;
-  font-size: 36px;
-  font-weight: bold;
+  font-size: 32px;
 }
 
 h3 {
   margin-left: 20px;
   margin-bottom: 8px;
-  font-size: 22px;
-  font-weight: bold;
+  font-size: 28px;
 }
 
-h4 {
+h4 {  margin-left: 30px;  margin-bottom: 8px;
+  font-size: 24px;
+}
+
+h5 {  margin-left: 40px;  margin-bottom: 8px;
+  font-size: 20px;
+}
+
+h6 {  margin-left: 50px;  margin-bottom: 8px;
   font-size: 16px;
-  font-weight: bold;
-}
-
-h5 {
-  font-size: 1em;
-}
-
-h6 {
-  font-size: .8em;
   // color: #303030;
 }
 
 h1,h2,h3,h4,h5,h6{
-  margin-top: 24px; 
+  margin-top: 24px;   font-weight: bold;
   // color: #24292e;
    color: #d5000d;
   white-space: nowrap;
