--- a/src/assets/css/markdown-body.scss
+++ b/src/assets/css/markdown-body.scss
@@ -30,7 +30,7 @@ body {
   line-height: 1;
 }
 ol, ul {   
-   display: table;
+  //  display: table;
   margin-left: 20px;
   list-style: none;
 }
@@ -128,7 +128,7 @@ pre code {
 ul, ol, dl {
   margin-top: -15px;
   margin-left: 40px;
-  margin-bottom: 20px;
+  margin-bottom: 20px;display: block;
 }
 
 li{
