--- a/src/assets/css/markdown-body.scss
+++ b/src/assets/css/markdown-body.scss
@@ -177,20 +177,24 @@ h2 {
   padding-bottom: 3px;
   // margin-left: 10px;
   // margin-bottom: 8px;
-  font-size: 32px;
+  font-size: 2em;
   background-color: #a2251c;
   // line-height: 40px;
   color: white;
 }
 
 h3 {
-  margin-left: 20px;
-  margin-bottom: 8px;
-  font-size: 28px;
+  padding-left: 20px;
+  padding-bottom: 3px;
+  font-size: 1.8em;
+  background-color: #3b5011;
+  color: white;
 }
 
-h4 {  margin-left: 30px;  margin-bottom: 8px;
-  font-size: 24px;
+h4 {  
+  margin-left: 30px;
+  margin-bottom: 8px;
+  font-size: 1.6em;
 }
 
 h5 {  margin-left: 40px;  margin-bottom: 8px;
